--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/hacker@v0.2.0
 plugins: jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Jacob Wallace
-description: I am a developer specializing in TypeScript and the JavaScript ecosystem. I enjoy making games.
-logo: /assets/images/me.jpg
+# title: Jacob Wallace
+# description: I am a developer specializing in TypeScript and the JavaScript ecosystem. I enjoy making games.
+# logo: /assets/images/me.jpg
